--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .flex {
   display: flex;
 }
